--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,8 @@
 {
   "hosting": {
-    "source": ".",
+    "public": "public",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-
+    "site": "neptune-wallet",
     "headers": [
       {
         "source": "/**",
